--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chat-master-node",
   "version": "1.1.0",
-  "description": "Chat en Node.js con Express, Socket.io y JSON database",
+  "description": "Chat en Node.js con Express, Socket.io y SQLite database",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -12,11 +12,10 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "sqlite3": "^5.1.6"
   },
   "engines": {
     "node": "18.x"
   }
 }
-
-
