--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "socket.io": "^4.7.2",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "connect-sqlite3": "^0.9.0"
   },
   "engines": {
     "node": "18.x"
