--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "chat-con-nodo",
-  "version": "1.0.0",
+  "name": "chat-master-node",
+  "version": "1.1.0",
+  "description": "Chat en Node.js con Express, Socket.io y SQLite database",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "body-parser": "^1.20.2",
+    "connect-sqlite3": "^0.9.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "sqlite3": "^5.1.6",
-    "bcryptjs": "^2.4.3",
     "express-session": "^1.17.3",
-    "connect-sqlite3": "^0.9.0"
+    "pg": "^8.16.3",
+    "socket.io": "^4.7.2",
+    "sqlite3": "^5.1.6"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
