--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.22.1",
     "express-session": "^1.18.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "socket.io": "^4.8.1",
